--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.8",
+    "jquery": "^3.3.1",
     "paper": "^0.11.5",
     "vue": "^2.5.11",
     "vuex": "^3.0.1"
